--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,11 @@ section {
 
 .thumbs {
     width: 630px;
+    height: 215px;
+    align-self: center;
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 15px;
 }
